cmake_minimum_required(VERSION 3.16)
project(Design_Patterns)

set(CMAKE_CXX_STANDARD 20)

add_executable(Design_Patterns SpaceShuttle.cpp SpaceShuttle.h Rocket.cpp Rocket.h SpaceCraft.cpp SpaceCraft.h ShuttleBuilder.h SpaceShuttleBuilder.cpp SpaceShuttleBuilder.h SpaceX.cpp SpaceX.h CrewDragon.cpp CrewDragon.h Dragon.cpp Dragon.h SpaceCraftFCreator.h CrewDragonCreator.cpp CrewDragonCreator.h DragonCreator.cpp DragonCreator.h FalconNine.cpp FalconNine.h FalconHeavy.cpp FalconHeavy.h Starlink.cpp Starlink.h Main.cpp RocketCreator.cpp RocketCreator.h FalconNineCreator.cpp FalconNineCreator.h FalconHeavyCreator.cpp FalconHeavyCreator.h)
